More memory for tycho surefire.